# learning-rust

./: README.md
01_getting_started/: exercises  exercises.rs
02_guessing_game/src/: main.rs
0304050608_concepts/: README.md
0304050608_concepts/src/: cli.rs  collection_hash_maps.rs  collection_strings.rs  conditionals.rs  enums.rs  functions.rs  main.rs  pointer_ref.rs  print.rs  slices.rs
03040508_concepts/: Cargo.toml
03040508_concepts/src/: collection_vectors.rs  loops.rs  structs.rs  tuples.rs  vars.rs
05_rectangles/src/: main.rs
07_restaurant_library/: Cargo.toml
07_restaurant_library/src/: lib.rs
09_error_handling/src/: main.rs
10_generics_traits_lifetimes/: Cargo.toml
10_generics_traits_lifetimes/src/: lib.rs
11_automated_tests/src/: lib.rs
11_automated_tests/tests/: integration_test.rs
12_minigrep/: output.txt
12_minigrep/src/: lib.rs  main.rs
13_fn_lang_features/: Cargo.toml
13_fn_lang_features/src/: closures.rs  counter.rs  iterators.rs  main.rs  shoes.rs
17_oop/: Cargo.toml
19_advanced_features/: Cargo.toml
20_web_server/: 404.html
benchmarking/: Cargo.toml
benchmarking/src/: main.rs
benchmarking/src/benches/: insertion_sort_benchmark.rs
benchmarking/src/sorter/: insertion_sort_benchmark.rs  sort.rs
hello_world/: hello
learning-axum/: Cargo.toml  README.md
memory/: README.md
rust-discussed/: README.md
rust-jwt-example/: Cargo.toml  README.md
rust_in_action/: README.md
rust_in_action/ch1-time-api/: Cargo.toml  README.md
rust_in_action/ch1-time-api/src/: main.rs
web_server/: home.html
(+85 files in other folders)
