[package]
name = "ch1-time-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.4"
rocket_codegen = "0.4.4"
rocket_contrib = "0.4.10"
serde = "1.0.137"
serde_derive = "1.0.137"
chrono = "0.4.19"